Renamed header file from .hpp to .h

--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,5 @@ sentence=Driver for Displax touch controllers over UART.
 paragraph=Arduino/PlatformIO library for interfacing with Displax touch controllers over UART using the Arduino Stream API. The serial port is provided by the application, so it works across common Arduino-compatible cores (RP2040, ESP32, SAMD, etc.).
 category=Communication
 url=https://github.com/kallaspriit/DisplaxTouch
+includes=DisplaxTouch.h
 architectures=*
